add_executable(example_basic example_basic.cpp)
target_link_libraries(example_basic PRIVATE sample_statistics)

add_executable(example_normal_distribution normal_distribution.cpp)
target_link_libraries(example_normal_distribution PRIVATE sample_statistics)

add_executable(example_binomial_distribution binomial_distribution.cpp)
target_link_libraries(example_binomial_distribution PRIVATE sample_statistics)

add_executable(example_normal_distribution_frequencies normal_distribution_frequencies.cpp)
target_link_libraries(example_normal_distribution_frequencies PRIVATE sample_statistics)

add_executable(example_binomial_distribution_frequencies binomial_distribution_frequencies.cpp)
target_link_libraries(example_binomial_distribution_frequencies PRIVATE sample_statistics)